--- a/package.json
+++ b/package.json
@@ -29,6 +29,14 @@
     "@ionic/storage": "2.1.3",
     "angular-spotify": "^1.5.1",
     "angularfire2": "^5.0.0-rc.5-next",
+    "cordova-android": "7.0.0",
+    "cordova-plugin-advanced-http": "^1.10.2",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-ionic-keyboard": "^2.0.5",
+    "cordova-plugin-ionic-webview": "^1.2.1",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "firebase": "^4.11.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
@@ -47,7 +55,15 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-plugin-advanced-http": {}
-    }
+      "cordova-plugin-advanced-http": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {}
+    },
+    "platforms": [
+      "android"
+    ]
   }
 }
